Fixed header overlapping
Header is overlapping with the callout details.

--- a/src/components/Callout/Callout.css
+++ b/src/components/Callout/Callout.css
@@ -30,7 +30,7 @@
     position: relative;    
     color: white;
     display: flex;
-    z-index: 999;
+    z-index: 500;
     text-align: center;
     justify-content: center;
     flex-direction: column;
